# cargo-rtic-scope

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs
.ci/: test_outputs.sh
.ci/expected/: .gitignore  Cargo.toml
.ci/expected/.cargo/: config
.ci/expected/manifests/: cargo-error.toml  general.toml  missing-dwt-units.toml  missing-expect-malformed.toml  missing-lts-prescaler.toml  missing-pac.toml  missing-tpiu.toml
.ci/expected/traces/: blinky.trace
.github/workflows/: build.yml  changelog.yml
assets/libadhoc/: Cargo.toml  not-Cargo.toml
assets/libadhoc/src/: lib.rs
cargo-rtic-scope/: Cargo.toml
cargo-rtic-scope/src/: build.rs  log.rs  main.rs  manifest.rs  recovery.rs
cargo-rtic-scope/src/sinks/: file.rs  frontend.rs  mod.rs
cargo-rtic-scope/src/sources/: bogus.rs  file.rs  mod.rs  probe.rs  raw_file.rs  tty.rs
cargo-rtic-trace/: Cargo.toml
cargo-rtic-trace/src/: build.rs  building.rs  main.rs  parse.rs  parsing.rs  serial.rs  trace.rs  tracing.rs
contrib/: flake.nix
cortex-m-rtic-trace/: Cargo.toml
cortex-m-rtic-trace/macros/: Cargo.toml
cortex-m-rtic-trace/macros/src/: lib.rs
cortex-m-rtic-trace/src/: lib.rs
examples/: Cargo.toml  memory.x
examples/.cargo/: config
macros/: Cargo.toml
macros/src/: lib.rs
rtic-scope-api/: Cargo.toml
rtic-scope-api/src/: lib.rs
rtic-scope-frontend-dummy/: Cargo.toml
rtic-scope-frontend-dummy/src/: main.rs
src/: build.rs  building.rs  diag.rs  lib.rs  log.rs  main.rs  manifest.rs  pacp.rs  parse.rs  parsing.rs  recovery.rs  serial.rs  sinks.rs  sources.rs  trace.rs  tracing.rs
src/sinks/: file.rs  frontend.rs  mod.rs
src/sources/: cmsis_dap.rs  file.rs  mod.rs  probe.rs  raw_file.rs  tty.rs
