[workspace]
members = ["cargo-rtic-scope", "cortex-m-rtic-trace"]

[patch.crates-io]
include_dir = { version = "0.6.3-alpha.0", git = "https://github.com/tmplt/include_dir.git", branch = "feat/extract-overwrite" }
cortex-m = { version = "0.7", git = "https://github.com/rust-embedded/cortex-m.git" }
