[workspace]
members = ["cargo-rtic-scope", "cortex-m-rtic-trace", "rtic-scope-api"]

[patch.crates-io]
include_dir = { version = "0.6.3-alpha.0", git = "https://github.com/tmplt/include_dir.git", branch = "feat/extract-overwrite" }
# cortex-m = { version = "0.7.3", git = "https://github.com/rtic-scope/cortex-m.git", branch = "feat/impl-lts-opts" }
