[package]
name = "cargo-rtic-scope"
version = "0.3.0"
authors = ["Viktor Sonesten <v@tmplt.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://rtic-scope.github.io"
repository = "https://github.com/rtic-scope/cargo-rtic-scope"
description = "RTIC Scope backend"

[dependencies]
# Auxilliary
structopt = "0.3"
clap = "2.33"
ctrlc = "3"
thiserror = "1"
colored = "2"
crossterm = "0.20"
anyhow = { version = "1", features = ["backtrace"] }
git2 = { version = "0.13", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
itm = { version = "0.4.0", git = "https://github.com/rtic-scope/itm.git", features = ["serde"], branch = "refactor/consume-decoder" }

# building and parsing
cargo_metadata = "0.14"
syn = "1"
proc-macro2 = "1"
quote = "1"
include_dir = "0.6.3-alpha.0"
libloading = "0.7"
rtic-syntax = "=0.5.0-rc.1"
tempfile = "3"
cortex-m = { version = "0.7", git = "https://github.com/rtic-scope/cortex-m", branch = "feat/impl-lts-opts", default-features = false, features = ["serde", "std-map"]}

# Probe support
probe-rs = { version = "0.12", git = "https://github.com/rtic-scope/probe-rs.git", branch = "feat/swo-read" }
probe-rs-cli-util = { version = "0.12", git = "https://github.com/rtic-scope/probe-rs.git", branch = "feat/swo-read" }

# TTY support
nix = "0.21.0"
serialport = { version = "4", default-features = false } # no libudev functionality needed

# Replay, API support
serde = "1"
serde_json = "1"
vectorize = "0.2.0"
rtic-scope-api = { path = "../rtic-scope-api" }
indexmap = { version = "1.7", features = [ "serde-1" ] }

# Async operations
futures = "0.3"
crossbeam-channel = "0.5.1"
async-std = { version = "1", features = [ "unstable" ] }
futures-lite = "1"
