[package]
name = "cargo-rtic-trace"
version = "0.1.0"
authors = ["Viktor Sonesten <v@tmplt.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
clap = "2.33"
cargo_metadata = "0.11"
anyhow = "1"
syn = "1"
proc-macro2 = "1"
quote = "1"
probe-rs = "0.10"
itm-decode = "0.3"
nix = "0.21.0"
include_dir = { git = "https://github.com/tmplt/include_dir.git", branch = "feat/truncate" }
libloading = "0.7"
rtic-syntax = { git = "https://github.com/rtic-rs/rtic-syntax.git" }
regex = "1"

[dependencies.serialport]
version = "4"
default-features = false # we don't need libudev functionalities
