[package]
name = "cortex-m-rtic-trace"
version = "0.3.3"
authors = ["Viktor Sonesten <v@tmplt.dev>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/rtic-scope/cortex-m-rtic-trace"
homepage = "https://github.com/rtic-scope/cortex-m-rtic-trace"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7.3"
rtic-trace-macros = { path = "macros", version = "0.0.0" }
