[package]
name = "trace-examples"
version = "0.1.0"
authors = ["Viktor Sonesten <v@tmplt.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.6"
panic-halt = "0.2"
cortex-m-rtic =  { git = "https://github.com/rtic-rs/cortex-m-rtic" }
rtic-trace = { git = "https://github.com/tmplt/rtic-trace" }

[dependencies.stm32f4]
version = "0.13"
features = ["stm32f401", "rt"]

[dependencies.stm32f4xx-hal]
version = "0.9"
features = ["rt", "stm32f401"]

[patch.crates-io]
cortex-m = { git = "https://github.com/tmplt/cortex-m", branch = "feat/tracing" }