[package]
name = "rtic-trace-macros"
version = "0.1.0"
authors = ["Viktor Sonesten <v@tmplt.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"

[dependencies.syn]
version = "1"
features = [ "parsing", "full" ]
