[package]
name = "rtic-scope-api"
version = "0.1.0-alpha.1"
authors = ["Viktor Sonesten <v@tmplt.dev>"]
edition = "2018"
repository = "https://github.com/rtic-scope/api"
homepage = "https://github.com/rtic-scope/api"
description = "API used between RTIC Scope front- and backends"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.itm-decode]
version = "0.6.1"
features = ["serde"]
