[package]
name = "rtic-scope-api"
version = "0.3.0"
authors = ["Viktor Sonesten <v@tmplt.dev>"]
edition = "2021"
repository = "https://github.com/rtic-scope/cargo-rtic-scope/rtic-scope-api"
description = "API used between RTIC Scope front- and backends"
license = "MIT OR Apache-2.0"

[dependencies]
itm = { version = "0.4.0", git = "https://github.com/rtic-scope/itm.git", features = ["serde"], branch = "refactor/consume-decoder" }

[dependencies.serde]
version = "1"
features = ["derive"]
